--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
     <string name="app_name">Random Game</string>
-    <string name="input_request">Введите число от 1 до 10</string>
+    <string name="input_request">Я думаю о числе от 1 до 10. Сможете ли вы угадать его?</string>
     <string name="input_numbers">Введите число</string>
     <string name="input">Ввод</string>
-    <string name="error1">Неверно. Загаданное число меньше.</string>
-    <string name="error2">Неверно. Загаданное число больше.</string>
+    <string name="hint">Подсказка</string>
+    <string name="hint1">Загаданное число меньше.</string>
+    <string name="hint2">Загаданное число больше.</string>
     <string name="error3">Ошибка! Недопустимый ввод.</string>
     <string name="offset">Поздравляю! Верный ответ.</string>
     <string name="gues_number">Угадайте число от 1 до 10</string>
     <string name="request">Сыграем ещё?(да/нет)</string>
     <string name="thanks">Спасибо за игру</string>
+    <string name="title">Угадай число</string>
+    <string name="quantity">Попыток</string>
 </resources>
